--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-23  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* alloc.c (gc_sweep): Check cons cell mark bits word by word
+	and optimize the case where they are all 1.
+
 2007-09-23  Johannes Weiner  <hannes@saeurebad.de>
 
 	* lisp.h (abs): Define if unknown.
