--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -5,9 +5,9 @@
 
 2007-09-23  Johannes Weiner  <hannes@saeurebad.de>
 
-	* lisp.h (abs): Define if unknown.
-	* keyboard.c, sound.c, w32term.c, xfaces.c, xterm.c: Don't
-	define abs now it's in lisp.h.
+	* lisp.h (abs): Define if not defined.
+	* keyboard.c, sound.c, w32term.c, xfaces.c, xterm.c:
+	Don't define `abs', since it's defined in lisp.h.
 
 2007-09-22  Eli Zaretskii  <eliz@gnu.org>
 
