--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -24,7 +24,7 @@
 
 	* emacs.texi:
 	* files.texi (Version Systems): Minor fixes to version-control material
-	suggseted by RMS and Robert J. Chassell.
+	suggested by RMS and Robert J. Chassell.
 
 2007-10-10  Eric S. Raymond  <esr@snark.thyrsus.com>
 
