*** empty log message ***

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,6 @@
 2007-10-22  Jason Rumney  <jasonr@gnu.org>
 
-	*  (m/windowsnt.h): Remove.
+	* m/windowsnt.h: Remove.
 
 2007-10-22  Juanma Barranquero  <lekktu@gmail.com>
 
