--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-08  Glenn Morris  <rgm@gnu.org>
+
+	* mouse.el (mouse-major-mode-menu): Suppress duplicate menus.
+
 2008-01-08  Nick Roberts  <nickrob@snap.net.nz>
 
 	* progmodes/gdb-ui.el (gdb-var-list-children-1): Put varnum in
