--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -9,6 +9,7 @@
 	(test-distrib): Phony targets removed.
 	($(BLD)/test-distrib.exe): Run test-distrib as part of the recipe.
 	(all): Don't depend on stamp_BLD.
+	(ALL): Include $(BLD)/test-distrib.exe.
 
 2012-03-11  Andreas Schwab  <schwab@linux-m68k.org>
 
