--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* term/w32-win.el (dynamic-library-alist): Add libxml2 DLLs.
+
 2012-04-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* window.el (shrink-window): Mention the `window-min-height'
