Update the Unicode database and derived files for Unicode 6.1.
 admin/unidata/README:
 admin/unidata/copyright.html:
 admin/unidata/BidiMirroring.txt:
 admin/unidata/UnicodeData.txt: Update for the latest version 6.1 of
 the Unicode Standard.

 lisp/international/uni-bidi.el:
 lisp/international/uni-category.el:
 lisp/international/uni-combining.el:
 lisp/international/uni-decimal.el:
 lisp/international/uni-decomposition.el:
 lisp/international/uni-digit.el:
 lisp/international/uni-lowercase.el:
 lisp/international/uni-mirrored.el:
 lisp/international/uni-name.el:
 lisp/international/uni-numeric.el:
 lisp/international/uni-titlecase.el:
 lisp/international/uni-uppercase.el: Update for Unicode 6.1.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,20 @@
 2012-04-07  Eli Zaretskii  <eliz@gnu.org>
 
+	* international/uni-bidi.el:
+	international/uni-category.el:
+	international/uni-combining.el:
+	international/uni-decimal.el:
+	international/uni-decomposition.el:
+	international/uni-digit.el:
+	international/uni-lowercase.el:
+	international/uni-mirrored.el:
+	international/uni-name.el:
+	international/uni-numeric.el:
+	international/uni-titlecase.el:
+	international/uni-uppercase.el: Update for Unicode 6.1.
+
+2012-04-07  Eli Zaretskii  <eliz@gnu.org>
+
 	* term/w32-win.el (dynamic-library-alist): Add libxml2 DLLs.
 
 2012-04-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
