--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* unidata/README:
+	* unidata/copyright.html:
+	* unidata/BidiMirroring.txt:
+	* unidata/UnicodeData.txt: Update for the latest version 6.1 of
+	the Unicode Standard.
+
 2012-02-16  Kenichi Handa  <handa@m17n.org>
 
 	* unidata/unidata-gen.el (unidata-prop-alist): Change the default
