--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-07  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Fix typo that broke non-Windows builds.
+	* xml.c (libxml2_loaded_p) [!!WINDOWSNT]: 'inine' -> 'inline'.
+
 2012-04-07  Eli Zaretskii  <eliz@gnu.org>
 
 	Support building on MS-Windows with libxml2.
