--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-07  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in: Replace non-portable use of $< in ordinary rules.
+
 2012-04-05  Glenn Morris  <rgm@gnu.org>
 
 	* glossary.texi (Glossary): Use anchors for internal cross-references.
