--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-07  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in: Replace non-portable use of $< in ordinary rules.
+
 2012-04-06  Chong Yidong  <cyd@gnu.org>
 
 	* minibuf.texi (Programmed Completion): Document metadata method.
