--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-07  Glenn Morris  <rgm@gnu.org>
+
+	* version.el (emacs-bzr-get-version): New function.
+	* loadup.el (emacs-bzr-version): Set it.  (Bug#8054)
+	* mail/emacsbug.el (report-emacs-bug): Include bzr version.
+
 2012-04-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* international/uni-bidi.el:
