--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-07  Glenn Morris  <rgm@gnu.org>
+
+	* README, configure.in (AC_INIT): Bump version to 24.1.50.
+
 2012-04-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* lib/makefile.w32-in (gnulib, all): Don't depend on stamp_BLD.
