--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-07  Glenn Morris  <rgm@gnu.org>
+
+	* emacsver.texi (EMACSVER): Bump version to 24.1.50.
+
 2012-04-05  Glenn Morris  <rgm@gnu.org>
 
 	* glossary.texi (Glossary): Use anchors for internal cross-references.
