--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-07  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Check pkg-config exit status when configuring (Bug#10626).
+	* configure.in (PKG_CHECK_MODULES): Do not assume that pkg-config
+	works; check its exit status.  Problem reported by Jordi Gutiérrez
+	Hermoso in
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-01/msg00787.html>.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* README, configure.in (AC_INIT): Bump version to 24.1.50.
