* lisp/loadup.el: Load bindings before cus-start. This reduces somewhat the number of "rogue" settings in emacs -Q.
Ref: http://lists.gnu.org/archive/html/emacs-devel/2008-06/msg00083.html

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-08  Glenn Morris  <rgm@gnu.org>
+
+	* loadup.el: Load bindings before cus-start.
+	This reduces somewhat the number of "rogue" settings in emacs -Q.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* version.el (emacs-bzr-get-version): New function.
