--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-08  Glenn Morris  <rgm@gnu.org>
+
+	* misc.texi (Gnus Startup): Use @env for environment variables.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Replace non-portable use of $< in ordinary rules.
