--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-08  Glenn Morris  <rgm@gnu.org>
+
+	* files.texi, frames.texi, loading.texi, os.texi, processes.texi:
+	Use @env for environment variables.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Replace non-portable use of $< in ordinary rules.
