--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-08  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* lisp.h (struct Lisp_Symbol): Add explicit padding to ensure
+	proper alignment.
+
 2012-04-07  Juanma Barranquero  <lekktu@gmail.com>
 
 	* xml.c (init_libxml2_functions) [WINDOWSNT]:
