Remove ucs-set-table-for-input dead code This function was removed with ucs-tables.el in 2008.
* lisp/international/mule-cmds.el (set-default-coding-systems):
* lisp/files.el (normal-mode):
Remove guarded calls to ucs-set-table-for-input. 

* src/buffer.c (Qucs_set_table_for_input): Remove.
(Fget_buffer_create): Don't call Qucs_set_table_for_input.
(init_buffer_once, syms_of_buffer): Remove Qucs_set_table_for_input.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-09  Glenn Morris  <rgm@gnu.org>
+
+	* international/mule-cmds.el (set-default-coding-systems):
+	* files.el (normal-mode):
+	Remove guarded calls to ucs-set-table-for-input.  (Bug#9821)
+	This function was removed with ucs-tables.el in 2008.
+
 2012-04-08  Eli Zaretskii  <eliz@gnu.org>
 
 	* textmodes/ispell.el (ispell-check-version): For hunspell, set
