--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-09  Glenn Morris  <rgm@gnu.org>
+
+	* buffer.c (Qucs_set_table_for_input): Remove.  (Bug#9821)
+	(Fget_buffer_create): Don't call Qucs_set_table_for_input.
+	(init_buffer_once, syms_of_buffer): Remove Qucs_set_table_for_input.
+
 2012-04-08  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* lisp.h (struct Lisp_Symbol): Add explicit padding to ensure
