* leim/quail/latin-ltx.el: Auto-generate some of the entries. (latin-ltx--ascii-p): New function. (latin-ltx--define-rules): New macro. (define-rules): Use it.

--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* quail/latin-ltx.el: Auto-generate some of the entries.
+	(latin-ltx--ascii-p): New function.
+	(latin-ltx--define-rules): New macro.
+	(define-rules): Use it.
+
 2012-03-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in (install): Use $(DIRNAME)_same-dir.tst instead
