Small changes for top-level Makefile
* Makefile.in (leim): Check cd return value.  Pass fewer variables.
(install-leim): Check cd return value.  Pass $MFLAGS.
(install-strip): Pass $MFLAGS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (leim): Check cd return value.  Pass fewer variables.
+	(install-leim): Check cd return value.  Pass $MFLAGS.
+	(install-strip): Pass $MFLAGS.
+
 	* configure.in: Require makeinfo >= 4.7.  (Bug#10910)
 	Eg org.texi has been using 4.7 functions for some time.
 
