composite.c: use 'double' consistently
* composite.c (get_composition_id): Use 'double' consistently
instead of converting 'float' to 'double' and vice versa; this is
easier to understand and avoids a GCC warning.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-09  Paul Eggert  <eggert@cs.ucla.edu>
+
+	composite.c: use 'double' consistently
+	* composite.c (get_composition_id): Use 'double' consistently
+	instead of converting 'float' to 'double' and vice versa; this is
+	easier to understand and avoids a GCC warning.
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Generate leim-list with bootstrap-emacs, in
