--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-09  Glenn Morris  <rgm@gnu.org>
+
+	* calendar/holidays.el (calendar-check-holidays): Doc fix.
+
 2012-04-08  Eli Zaretskii  <eliz@gnu.org>
 
 	* textmodes/ispell.el (ispell-dictionary-base-alist): Add data for
