--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,15 @@
+2012-04-09  Chong Yidong  <cyd@gnu.org>
+
+	* custom.el (custom-variable-p): Return nil for non-symbol
+	arguments instead of signaling an error.
+	(user-variable-p): Obsolete alias for custom-variable-p.
+
+	* apropos.el (apropos-variable):
+	* files-x.el (read-file-local-variable):
+	* simple.el (set-variable):
+	* woman.el (woman-mini-help):
+	* emacs-lisp/byte-opt.el (side-effect-free-fns): Callers changed.
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* startup.el (normal-top-level): Don't look for leim-list.el
