Add documentation for the Emacs GnuTLS integration.
* info/dir (File):
* Makefile.in: Add emacs-gnutls to the info directory and the
INFO_FILES target.

* doc/misc/emacs-gnutls.texi: Add documentation for the GnuTLS integration.

* doc/misc/gnutls.texi: New file to explain the GnuTLS integration.

* doc/misc/Makefile.in: Add gnutls.texi to build.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-09  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* Makefile.in: Add gnutls.texi to build.
+
+	* gnutls.texi: New file to explain the GnuTLS integration.
+
+	* emacs-gnutls.texi: Add documentation for the GnuTLS integration.
+
 2012-04-05  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* auth.texi (Secret Service API): Edit further and give examples.
