--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-09  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* info/dir (File):
+	* Makefile.in: Add emacs-gnutls to the info directory and the
+	INFO_FILES target.
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (leim): Check cd return value.  Pass fewer variables.
