--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-09  Eli Zaretskii  <eliz@gnu.org>
+
+	* simple.el (shell-command-on-region): Doc fix.  (Bug#11208)
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* calendar/holidays.el (calendar-check-holidays): Doc fix.
