--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-09  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in ($(leimdir)/leim-list.el):
+	Pass EMACS rather than BUILT_EMACS.
+
 2012-04-09  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* process.c (make_process):
