--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,7 +1,11 @@
+2012-04-09  Glenn Morris  <rgm@gnu.org>
+
+	* version.el (emacs-bzr-get-version):
+	Handle lightweight checkouts of local branches.
+
 2012-04-09  Andreas Schwab  <schwab@linux-m68k.org>
 
-	* international/characters.el: Recover lost case pairs.
-	(Bug#11209)
+	* international/characters.el: Recover lost case pairs.  (Bug#11209)
 
 2012-04-09  Chong Yidong  <cyd@gnu.org>
 
