--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* publicsuffix.txt: New file (bug#1401).
+
 2012-04-02  Alan Mackenzie  <acm@muc.de>
 
 	* NEWS: Add CC Mode entries.
