--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* url-domsurf.el: New file (bug#1401).
+
+	* url-cookie.el (url-cookie-two-dot-domains): Remove.
+	(url-cookie-host-can-set-p): Use `url-domsuf-cookie-allowed-p'
+	instead of the variable above.
+
 2012-03-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* url-queue.el (url-queue-kill-job): Check whether the buffer has
