--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* textmodes/fill.el (fill-region): Leave point and mark where they
+	were before filling (bug#5399).
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* version.el (emacs-bzr-get-version):
