--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* simple.el (zap-to-char): Allow zapping using input methods
+	(bug#1580).
+
 	* textmodes/fill.el (fill-region): Leave point and mark where they
 	were before filling (bug#5399).
 
